Adding FAQ Page

--- a/faq.htm
+++ b/faq.htm
@@ -10,7 +10,7 @@
         content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
 
     <title>Digital Agency</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/about.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/faq.css">
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="shortcut icon" href="assets/img/Group.png" type="image/x-icon">
@@ -32,7 +32,7 @@
             <li><a href="advertise.html" aria-label="Read more"><i
                         class='bx bx-message-alt-add'></i><span>Advertise</span></a></li>
             <li><a href="support.html" aria-label="Read more"><i class='bx bx-support'></i><span>Support</span></a></li>
-            <li><a href="#" aria-label="Read more" class="active"><i
+            <li><a href="about.html" aria-label="Read more" class="active"><i
                         class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
@@ -47,8 +47,8 @@
 <div class="main">
     <section class="about">
         <div class="title-sec">
-            <h1>About us</h1>
-            <h2>Team and conatct</h2>
+            <h1>F A Q</h1>
+            <h2>most Questions</h2>
             <p>A service agency with customer satisfaction</p>
             <a href="faq.htm" class="getbtn" aria-label="Read more">Most Popular Questions</a>
         </div>
@@ -57,76 +57,53 @@
         </div>
     </section>
 
+    <section>
+        <h1 class="h1">Frequently Asked Questions</h1>
+    <div class="faq-container">
+        <div class="faq">
+            <div class="arrow">
+                <div class="question">Q: Question 1</div>
+                <i class='bx bxs-chevron-down'  id="arrow"></i>
+            </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+        </div>
+        <div class="faq">
+            <div class="arrow">
+                <div class="question">Q: Question 2</div>
+                <i class='bx bxs-chevron-down'  id="arrow"></i>
+            </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+        </div>
+        <div class="faq">
+            <div class="arrow">
+                <div class="question">Q: Question 3</div>
+                <i class='bx bxs-chevron-down'  id="arrow"></i>
+            </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+        </div>
+        <div class="faq">
+            <div class="arrow">
+                <div class="question">Q: Question 4</div>
+                <i class='bx bxs-chevron-down'  id="arrow"></i>
+            </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+        </div>
+        <div class="faq">
+            <div class="arrow">
+                <div class="question">Q: Question 5</div>
+                <i class='bx bxs-chevron-down' id="arrow" ></i>
+            </div>
+            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+        </div>
+        <!-- Add more FAQ items here -->
+    </div>
+    </section>
+
     <div class="field">
         <div class="mouse"></div>
     </div>
 
-    <section class="who">
-        <h1>Who Are We</h1>
-        <div class="row">
-            <div class="img">
-                <img src="assets/img/illustration.png" alt="#">
-            </div>
-            <div class="txt">
-                <p> we are not just digital enthusiasts we are architects of online success stories. Founded on the
-                    belief that the digital landscape is the canvas where innovation meets strategy, we embark on a
-                    journey to transform ideas into impactful digital experiences</p>
-            </div>
-        </div>
-        <div class="why">
-            <div class="rows">
-                <div class="txts">
-                    <h1>Why you choose our service?</h1>
-                    <div class="line1"></div>
-                </div>
-                <div class="txts">
-                    <h1>What’s our business promise?</h1>
-                </div>
-                <div class="txts">
-                    <h1>What’s our role model plan?</h1>
-                </div>
-            </div>
-        </div>
 
-        <div class="rows-why">
-            <div class="column">
-                <div class="col-1">
-                    <h1>We will turn your idea in <br>the successful business <br>model framework</h1>
-                    <p>Get your tests delivered at let home collect sample from <br>the victory of the managments that
-                        supplies best design <br>system guidelines ever.</p>
-                    <div class="checks">
-                        <div class="check-1">
-                            <a href="#" class="a2"><i class='bx bxs-check-circle'></i> Medical and vision</a>
-                            <a href="#"><i class='bx bxs-check-circle'></i> Life insurance</a>
-                        </div>
-                        <div class="check-2">
-                            <a href="#" class="a1"><i class='bx bxs-check-circle'></i> HSAs and FSAs</a>
-                            <a href="#"><i class='bx bxs-check-circle'></i> Commuter benefits</a>
-                        </div>
-                    </div>
-                    <a href="#" class="explore">Explore more <i class='bx bx-chevron-right'></i></a>
-                </div>
-                <div class="col-2">
-                    <img src="assets/img/illustration2.png" alt="#">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <div class="founder">
-        <div class="rowss">
-            <div class="img">
-                <img src="assets/img/image11.png" alt="#">
-            </div>
-            <div class="detailss">
-                <h1>FOUNDER</h1>
-                <p>Mr James</p>
-                <p class="p1"> we are not just digital enthusiasts we are architects of online success <br>stories.
-                    Founded on the belief that the digital landscape is the canvas <br>where innovation meets strategy,
-                    we embark on a journey to transform <br>ideas into impactful digital experiences</p>
-            </div>
-        </div>
-    </div>
 
     <section class="subscribe">
         <div class="det">
@@ -216,8 +193,10 @@
 
 </div>
 
+<script src="assets/js/faq.js"></script>
+
 <script src="assets/js/home.js"></script>
-    <script src="assets/js/script.js"></script>
+<script src="assets/js/script.js"></script>
 
 
 </body>
