--- a/support.html
+++ b/support.html
@@ -26,9 +26,10 @@
 <body>
     <!--header--->
     <header>
+        <div class="bx bx-menu" id="menu"></div>
         <a href="index.html" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="home.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
             <li><a href="advertise.html" aria-label="Read more"><i
                         class='bx bx-message-alt-add'></i><span>Advertise</span></a></li>
             <li><a href="#" aria-label="Read more" class="active"><i class='bx bx-support'></i><span>Support</span></a>
@@ -203,8 +204,52 @@
     </footer>
    </div>
 
+   <div class="mob">
+    
+    <img src="assets/img/3D Illustration WFH Character.jpg" alt="image" class="h-img">
+    <div class="row-mob">
+        <div class="title">
+            <h1>How can we Help ??</h1>
+            <div class="line-t"></div>
+        </div>
+    </div>
 
+    <div class="contact-mob">
+        <form action="#">
+            <input type="text" placeholder="UserName">
+            <input type="email" placeholder="E-mail">
+            <textarea  cols="30" rows="10" placeholder="Message"></textarea>
+            <button class="btn-contact">Send</button>
+        </form>
+    </div>
+
+    <div class="row-mob">
+        <div class="title">
+            <h1>Support</h1>
+            <div class="line-t"></div>
+        </div>
+    </div>
+    <div class="cols">
+        <div class="content">
+            <img src="assets/img/phone-call.png" alt="image">
+            <h1>06-49-50-75-76</h1>
+        </div>
+        <div class="content">
+            <img src="assets/img/linkedin.png" alt="image">
+            <h1>Innovations</h1>
+        </div>
+        <div class="content">
+            <img src="assets/img/behance.png" alt="image">
+            <h1>Innovation-11</h1>
+        </div>
+    </div>
+
+</div>
+
+
+    <script src="assets/js/home.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/support.js"></script>
 
 
 </body>
