--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
                 <h3>Login To your Account</h3>
                 <form id="account-form" action="home.html" method="GET">
                     <div class="form">
-                        <input type="text" placeholder="UserName" name="UserName" id="name">
+                        <input type="text" placeholder="UserName" name="username" id="name">
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
                         <p>Error Message</p>
