--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                         class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn" aria-label="Read more" title="go to home">Login</a>
+            <a href="login.html" class="btn" aria-label="Read more" title="go to home" id="name">Login</a>
             <a href="signup.html" class="btn2" aria-label="Read more" title="go to home">Get Started</a>
             <div class="line">
                 <img src="assets/img/line.png" alt="image">
