Reformulation de siteWeb

--- a/faq.htm
+++ b/faq.htm
@@ -62,38 +62,38 @@
     <div class="faq-container">
         <div class="faq">
             <div class="arrow">
-                <div class="question">Q: Question 1</div>
+                <div class="question">Q1 : Quels services votre agence digitale propose-t-elle ?</div>
                 <i class='bx bxs-chevron-down'  id="arrow"></i>
             </div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+            <div class="answer">Réponse : Notre agence digitale offre une gamme complète de services, y compris la conception de sites web, le référencement, la gestion des médias sociaux, le marketing par e-mail, la publicité en ligne, la création de contenu, et bien plus encore. Notre objectif est de répondre à tous vos besoins numériques.</div>
         </div>
         <div class="faq">
             <div class="arrow">
-                <div class="question">Q: Question 2</div>
+                <div class="question">Q2 : Comment puis-je demander un devis pour vos services ?</div>
                 <i class='bx bxs-chevron-down'  id="arrow"></i>
             </div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+            <div class="answer">Réponse : Pour demander un devis, il vous suffit de remplir le formulaire de contact sur notre site web ou de nous appeler. Nous vous contacterons rapidement pour discuter de vos besoins spécifiques et élaborer un devis personnalisé.</div>
         </div>
         <div class="faq">
             <div class="arrow">
-                <div class="question">Q: Question 3</div>
+                <div class="question">Q3 : Combien de temps faut-il pour voir des résultats avec vos services de référencement ?</div>
                 <i class='bx bxs-chevron-down'  id="arrow"></i>
             </div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+            <div class="answer">Réponse : Le délai pour voir des résultats avec nos services de référencement dépend de plusieurs facteurs, y compris la concurrence dans votre secteur et votre budget. En règle générale, les améliorations peuvent commencer à se manifester en quelques mois, mais des résultats significatifs peuvent prendre de six mois à un an.</div>
         </div>
         <div class="faq">
             <div class="arrow">
-                <div class="question">Q: Question 4</div>
+                <div class="question">Q4 : Proposez-vous des services de marketing sur les médias sociaux ?</div>
                 <i class='bx bxs-chevron-down'  id="arrow"></i>
             </div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+            <div class="answer">Réponse : Oui, nous proposons des services de gestion des médias sociaux. Nous créons des stratégies sur mesure, publions du contenu de qualité, gérons vos publicités et analysons les performances pour maximiser votre présence en ligne.</div>
         </div>
         <div class="faq">
             <div class="arrow">
-                <div class="question">Q: Question 5</div>
+                <div class="question">Q5 : Pouvez-vous concevoir un site web sur mesure pour mon entreprise ?</div>
                 <i class='bx bxs-chevron-down' id="arrow" ></i>
             </div>
-            <div class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quis sit odit! Mollitia fugiat nemo sunt voluptas sed asperiores est dolor aut, facilis id, repudiandae magni deserunt qui nisi! Voluptates.</div>
+            <div class="answer">Réponse : Absolument. Notre équipe de concepteurs web talentueux crée des sites web sur mesure qui correspondent parfaitement à l'image et aux besoins de votre entreprise. Nous travaillons en étroite collaboration avec vous pour garantir que le résultat final vous convienne.</div>
         </div>
         <!-- Add more FAQ items here -->
     </div>
