--- a/home.html
+++ b/home.html
@@ -43,11 +43,8 @@
                         class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn" aria-label="Read more" title="go to home" id="name">Login</a>
-            <a href="signup.html" class="btn2" aria-label="Read more" title="go to home">Get Started</a>
-            <div class="line">
-                <img src="assets/img/line.png" alt="image">
-            </div>
+            <a href="index.html" class="btn2" aria-label="Read more" title="logout">LogOut<img src="assets/img/me.jpg" alt=""></a>
+            
         </div>
         
     </header>
