Adding Dark Mode

--- a/home.html
+++ b/home.html
@@ -45,30 +45,12 @@
         <div class="other">
             <a href="#" class="btn2" aria-label="Read more" title="logout"></a>
             <a href="login.html" class="btn2" aria-label="Read more" title="logout">LogOut</a>
-
+            <i class='bx bxs-sun' id="moon"></i>
         </div>
 
     </header>
 
     <div class="main">
-        <div class="popup">
-            <div class="box">
-                <div class="img_box">
-                    <img src="assets/img/Woman1.png" alt="image">
-                </div>
-                <div class="content">
-                    <h1>Special Offer</h1>
-                    <h2>60% OFF</h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam praesentium accusantium commodi
-                        iusto impedit officiis recusandae!</p>
-                    <a href="signup.html">Sign up To Get Offer</a>
-                </div>
-                <div class="remove">
-                    <i class='bx bx-x'></i>
-                </div>
-            </div>
-
-        </div>
         <section class="home" id="home">
             <div class="cards">
                 <h1>Grow your startup with our Service</h1>
@@ -282,11 +264,9 @@
                     <div class="col-blog" data-aos="fade-up" data-aos-duration="1500">
                         <div class="image">
                             <img src="assets/img/image-36.png" alt="#">
-                            <h1 class="txt1">Multiple task wireframing with team management perform better</h1>
                         </div>
                         <div class="image">
                             <img src="assets/img/image-69.png" alt="#">
-                            <h1 class="txt2">Team presentation with latest user interface & experience reach more</h1>
                         </div>
                     </div>
                 </div>
