--- a/signup.html
+++ b/signup.html
@@ -54,21 +54,25 @@
                 <form id="account-form" action="home.html" method="GET">
                     <div class="form">
                         <input type="text" placeholder="UserName" name="username" id="name">
+                        <p class="err-mg"></p>
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
                     </div>
                     <div class="form">
                         <input type="email" placeholder="E-mail" name="Email" id="email">
+                        <p></p>
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
                     </div>
                     <div class="form">
                         <input type="password" placeholder="Password" name="Password" id="password">
+                        <p></p>
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
                     </div>
                     <div class="form">
                         <input type="password" placeholder="Confirm Password" id="confirm">
+                        <p></p>
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
                     </div>
