Adding Dark Mode in all pages

--- a/advertise.html
+++ b/advertise.html
@@ -37,11 +37,9 @@
             <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="login.html" class="btn" aria-label="Read more">Login</a>
-            <a href="signup.html" class="btn2" aria-label="Read more">Get Started</a>
-            <div class="line">
-                <img src="assets/img/line.png" alt="#">
-            </div>
+            <a href="#" class="btn2" aria-label="Read more" title="logout"></a>
+            <a href="login.html" class="btn2" aria-label="Read more" title="logout">LogOut</a>
+            <i class='bx bxs-sun' id="moon"></i>
         </div>
     </header>
 
