--- a/faq.htm
+++ b/faq.htm
@@ -28,12 +28,9 @@
         <div class="bx bx-menu" id="menu"></div>
         <a href="index.html" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="home.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html" aria-label="Read more"><i
-                        class='bx bx-message-alt-add'></i><span>Advertise</span></a></li>
-            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support'></i><span>Support</span></a></li>
-            <li><a href="about.html" aria-label="Read more" class="active"><i
-                        class='bx bx-info-circle'></i><span>About</span></a></li>
+            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="#" aria-label="Read more" class="active"><i
+                        class='bx bx-info-circle'></i><span>FAQ</span></a></li>
         </ul>
         <div class="other">
             <a href="login.html" class="btn" aria-label="Read more">Login</a>
