--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <ul class="navlist">
             <li><a href="index.html" aria-label="Read more" title="go to home" class="active"><i
                         class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="faq.htm" aria-label="Read more" title="go to home"><i
+                        class='bx bx-info-circle'></i><span>FAQ</span></a></li>
         </ul>
         <div class="other">
             <a href="login.html" class="btn" aria-label="Read more" title="go to home">Login</a>
