Quick Fix in Responsive

--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@
                         <i class='bx bxs-info-circle'></i>
                     </div>
                     <div class="form">
-                        <input type="email" placeholder="E-mail" name="Email" id="email">
+                        <input type="text" placeholder="E-mail" name="Email" id="email">
                         <p></p>
                         <i class='bx bxs-check-circle'></i>
                         <i class='bx bxs-info-circle'></i>
