--- a/login.html
+++ b/login.html
@@ -49,13 +49,14 @@
                     <form id="account-form" action="home.html" method="GET">
 
                         <div class="form">
-                            <input type="email" placeholder="E-mail" name="Email" id="email">
-                            
+                            <input type="text" placeholder="E-mail" name="Email" id="email">
+                            <p></p>
                             <i class='bx bxs-check-circle'></i>
                             <i class='bx bxs-info-circle'></i>
                         </div>
                         <div class="form">
                             <input type="password" placeholder="Password" name="Password" id="password">
+                            <p></p>
                             <i class='bx bxs-check-circle'></i>
                             <i class='bx bxs-info-circle'></i>
                         </div>
