--- a/advertise.html
+++ b/advertise.html
@@ -53,7 +53,7 @@
                 <a href="login.html" class="getbtn" aria-label="Read more">Get Started</a>
             </div>
             <div class="adver-img" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <img src="assets/img/DigitalMarketer1.png" alt="#">
+                <img src="assets/img/Man1.png" alt="#">
             </div>
         </section>
 
