--- a/support.html
+++ b/support.html
@@ -52,7 +52,7 @@
             <a href="login.html" class="getbtn" aria-label="Read more">Get Started</a>
         </div>
         <div class="supp-img">
-            <img src="assets/img/Girlandguy2.png" alt="#">
+            <img src="assets/img/Man2.png" alt="#">
         </div>
     </section>
 
