complete validation with localStorage

--- a/details.html
+++ b/details.html
@@ -19,22 +19,21 @@
 </head>
 <body>
 	<!--header--->
-	<header>
-		<a href="index.html" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
+    <header>
+        <a href="index.html" class="logo"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
-            <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="advertise.html" aria-label="Read more"><i class='bx bx-message-alt-add' ></i><span>Advertise</span></a></li>
-            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support' ></i><span>Support</span></a></li>
-            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle' ></i><span>About</span></a></li>
+            <li><a href="home.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
+            <li><a href="#" aria-label="Read more" class="active"><i
+                        class='bx bx-message-alt-add'></i><span>Advertise</span></a></li>
+            <li><a href="support.html" aria-label="Read more"><i class='bx bx-support'></i><span>Support</span></a></li>
+            <li><a href="about.html" aria-label="Read more"><i class='bx bx-info-circle'></i><span>About</span></a></li>
         </ul>
         <div class="other">
-            <a href="#" class="btn" aria-label="Read more">Login</a>
-            <a href="#" class="btn2" aria-label="Read more">Get Started</a>
-            <div class="line">
-                <img src="assets/img/line.png" alt="#">
-            </div>
+            <a href="#" class="btn2" aria-label="Read more" title="logout"></a>
+            <a href="login.html" class="btn2" aria-label="Read more" title="logout">LogOut</a>
+            <i class='bx bxs-sun' id="moon"></i>
         </div>
-	</header>
+    </header>
 
     <section class="details">
         <div class="title-sec">
@@ -194,4 +193,8 @@
             </div>
         </div>
     </footer>
+
+
+    <script src="assets/js/home.js"></script>
+    <script src="assets/js/login.js"></script>
 </body>    
