Quick Fix in About us

--- a/about.html
+++ b/about.html
@@ -74,14 +74,13 @@
         <div class="why">
             <div class="rows">
                 <div class="txts">
-                    <h1>Why you choose our service?</h1>
-                    <div class="line1"></div>
+                    <h1 class="quest activequest">Why you choose our service?</h1>
                 </div>
                 <div class="txts">
-                    <h1>What’s our business promise?</h1>
+                    <h1 class="quest">What’s our business promise?</h1>
                 </div>
                 <div class="txts">
-                    <h1>What’s our role model plan?</h1>
+                    <h1 class="quest">What’s our role model plan?</h1>
                 </div>
             </div>
         </div>
@@ -89,8 +88,8 @@
         <div class="rows-why">
             <div class="column">
                 <div class="col-1">
-                    <h1>We will turn your idea in <br>the successful business <br>model framework</h1>
-                    <p>Get your tests delivered at let home collect sample from <br>the victory of the managments that
+                    <h1 class="para1">We will turn your idea in <br>the successful business <br>model framework</h1>
+                    <p class="para2">Get your tests delivered at let home collect sample from <br>the victory of the managments that
                         supplies best design <br>system guidelines ever.</p>
                     <div class="checks">
                         <div class="check-1">
@@ -105,7 +104,7 @@
                     <a href="#" class="explore">Explore more <i class='bx bx-chevron-right'></i></a>
                 </div>
                 <div class="col-2">
-                    <img src="assets/img/illustration2.png" alt="#">
+                    <img src="assets/img/illustration2.png" alt="#" class="image-who">
                 </div>
             </div>
         </div>
@@ -216,6 +215,7 @@
 
 <script src="assets/js/home.js"></script>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/about.js"></script>
 
 
 </body>
