--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
         <div class="why">
             <div class="rows">
                 <div class="txts">
-                    <h1 class="quest activequest">Why you choose our service?</h1>
+                    <h1 class="quest">Why you choose our service?</h1>
                 </div>
                 <div class="txts">
                     <h1 class="quest">What’s our business promise?</h1>
