--- a/advertise.html
+++ b/advertise.html
@@ -127,7 +127,7 @@
                     <div class="rows-1" data-aos="fade-down" data-aos-duration="1500">
                         <img src="assets/img/image64.png" alt="#">
                         <div class="details">
-                            <h1>Marketing & advertising</h1>
+                            <h1>3D Modeling & Art Expertise</h1>
                             <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
                             <a href="details.html" aria-label="Read more">Learn More <i
                                     class='bx bxs-chevron-right'></i></a>
@@ -137,7 +137,7 @@
                     <div class="rows-1" data-aos="fade-up" data-aos-duration="1500">
                         <img src="assets/img/image62.png" alt="#">
                         <div class="details">
-                            <h1>Ultimate development</h1>
+                            <h1>Digital Promotion</h1>
                             <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
                             <a href="details.html" aria-label="Read more">Learn More <i
                                     class='bx bxs-chevron-right'></i></a>
@@ -147,7 +147,7 @@
                     <div class="rows-1" data-aos="fade-down" data-aos-duration="1500">
                         <img src="assets/img/image58.png" alt="#">
                         <div class="details">
-                            <h1>Business Enterprise</h1>
+                            <h1>Online Support</h1>
                             <p>Get your info tests delivered at home collect a sample from the your pogress tests.</p>
                             <a href="details.html" aria-label="Read more">Learn More <i
                                     class='bx bxs-chevron-right'></i></a>
