Fix Something wrong

--- a/login.html
+++ b/login.html
@@ -25,10 +25,10 @@
 <body>
     <!--header--->
     <header>
-        <a href="index.html" class="logo" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
+        <a href="index.html" class="logo act" aria-label="Read more"><img src="assets/img/Group.png" alt="#">Innovations</a>
         <ul class="navlist">
             <li><a href="index.html" aria-label="Read more"><i class='bx bx-home-alt-2'></i><span>Home</span></a></li>
-            <li><a href="#" aria-label="Read more" class="active"><i
+            <li><a href="#" aria-label="Read more" class="active black"><i
                         class='bx bx-info-circle'></i><span>FAQ</span></a></li>
         </ul>
         <div class="other">
